--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -22,7 +22,7 @@
         android:layout_margin="5dp"
         android:layout_marginTop="16dp"
         android:text="User email"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/black"
 
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="8dp"
         android:text="Test"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/black"
 
         android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
